course detail card alignment fixes

--- a/src/app/courses/course-detail/course-detail.component.scss
+++ b/src/app/courses/course-detail/course-detail.component.scss
@@ -5,7 +5,7 @@
     height: 292px;
     margin-right: 90px;
 }
-.course-tile {
+.course-detail-tile {
     max-width: 1375px;
 }
 .date-icon {
