--- a/src/app/courses/courses.component.scss
+++ b/src/app/courses/courses.component.scss
@@ -28,3 +28,6 @@
         font-family: 'GTWalsheimPro-Regular';
     }
 }
+.course-detail-tile {
+    max-width: 1710px;
+}
